--- a/api/package.json
+++ b/api/package.json
@@ -25,5 +25,18 @@
   "bugs": {
     "url": "https://github.com/aAndres441/mensajeriaMEAN/issues"
   },
-  "homepage": "https://github.com/aAndres441/mensajeriaMEAN#readme"
+  "homepage": "https://github.com/aAndres441/mensajeriaMEAN#readme",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.0",
+    "connect-multiparty": "^2.2.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "jwt-simple": "^0.5.6",
+    "moment": "^2.29.3",
+    "mongoose": "^6.3.5"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
+  }
 }
