--- a/api/package.json
+++ b/api/package.json
@@ -24,7 +24,7 @@
     "cors",
     "express",
     "node.js",
-    "bcryptjs",
+    "bcrypt-nodejs",
     "body-parser",
     "connect-multiparty",
     "jwt",
@@ -37,10 +37,12 @@
   },
   "homepage": "https://github.com/aAndres441/mensajeriaMEAN#readme",
   "dependencies": {
+    "bcrypt-nodejs": "^0.0.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "connect-multiparty": "^2.2.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.18.1",
     "jwt-simple": "^0.5.6",
     "moment": "^2.29.3",
