--- a/api/package.json
+++ b/api/package.json
@@ -8,7 +8,7 @@
     "dev": " nodemon index.ts",
     "start": "ts-node-dev index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "clean": "rimraf rotes"
+    "clean": "rimraf middleware/carpetaName"
   },
   "repository": {
     "type": "git",
@@ -27,8 +27,12 @@
     "bcrypt-nodejs",
     "body-parser",
     "connect-multiparty",
-    "jwt",
-    "cors"
+    "jwt-simple",
+    "cors",
+    "moment",
+    "dotenv",
+    "rimraf",
+    "uuid"
   ],
   "author": "Andres_Arias <andrarias@gmail.com>",
   "license": "MIT",
@@ -45,12 +49,16 @@
     "crypto": "^1.0.1",
     "express": "^4.18.1",
     "jwt-simple": "^0.5.6",
+    "lodash": "^4.17.21",
     "moment": "^2.29.3",
     "mongodb": "^4.7.0",
-    "mongoose": "^6.3.5"
+    "mongoose": "^6.3.5",
+    "mongoose-pagination": "^1.0.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "dotenv": "^16.0.1",
     "nodemon": "^2.0.16",
     "rimraf": "^3.0.2",
     "ts-node-dev": "^2.0.0"
