--- a/api/package.json
+++ b/api/package.json
@@ -6,6 +6,7 @@
   "type": "commonjs",
   "scripts": {
     "dev": " nodemon index.ts",
+    "dev:DDD": " nodemon cleanArchitect/inicio.ts",
     "start": "ts-node-dev index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rimraf middleware/carpetaName"
@@ -57,7 +58,9 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/node": "^18.7.16",
     "dotenv": "^16.0.1",
     "nodemon": "^2.0.16",
     "rimraf": "^3.0.2",
