--- a/api/package.json
+++ b/api/package.json
@@ -62,6 +62,7 @@
     "@types/express": "^4.17.13",
     "@types/node": "^18.7.16",
     "dotenv": "^16.0.1",
+    "eslint-plugin-hexagonal-architecture": "^1.0.3",
     "nodemon": "^2.0.16",
     "rimraf": "^3.0.2",
     "ts-node-dev": "^2.0.0"
